#6 documentación Técnicas y herramentas

--- a/Documentación/LATEX/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/LATEX/tex/4_Tecnicas_y_herramientas.tex
@@ -4,3 +4,32 @@ Esta parte de la memoria tiene como objetivo presentar las técnicas metodológi
 No se pretende que este apartado se convierta en un capítulo de un libro dedicado a cada una de las alternativas, sino comentar los aspectos más destacados de cada opción, con un repaso somero a los fundamentos esenciales y referencias bibliográficas para que el lector pueda ampliar su conocimiento sobre el tema.
 
 
+\section{Stream Processing Framework}
+
+\subsection{Apache Kafka}
+
+Apache Kafka es un sistema de intermediación de mensajes que respone al patrón "Publish/Subscribe Messaging" que se utiliza para la comunicación entre aplicaciones. Entre sus principales características se encuentran que es un sistema escalable y persistente, con gran tolerancia a fallos y gran velocidad tanto de escritura cómo de lectura.
+
+Para transmitir estos datos Kafka crea Topics, flujos de datos que a su vez se dividen en particiones, cada mensaje se almacena en una de estas particiones.
+
+\subsection{APACHE SAMZA}
+
+
+\subsection{APACHE FLUME}
+
+
+\subsection{Apache Spark}
+
+
+\section{Visualización y análisis de datos}
+
+
+\section{Motor de búsquedas}
+
+\subsection{Algolia}
+
+
+\subsection{ElectricSearch}
+
+
+\subsection{Solr}
