#8 objetivos del proyecto

--- a/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
@@ -1,3 +1,15 @@
 \capitulo{2}{Objetivos del proyecto}
 
-Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
+El objetivo de este proyecto consta de la captación dinámica de diversos datos provenientes de sensores IOT, los datos, cedidos por el cliente se han de tratar y almacenar en una base de datos para poder ser consultados y monitorizados por el usuario en cualquier momento y a tiempo real. 
+
+Se implementará también un algoritmo de aprendizaje automático que ha de aprender con los datos obtenidos a identificar patrones que puedan llevar a situaciones no deseadas y que esto pueda ayudar al usuario a tomar decisiones con la suficiente antelación.
+
+\subsection{Objetivos}
+
+\begin{enumerate}
+    \item Utilizar un repositorio en github y aplicar conocimientos sobre gestión de proyectos.
+    \item Realizar un algoritmo de aprendizaje automático para poder aplicar lo aprendido durante la carrera así cómo ampliar mis conocimientos sobre minería de datos.
+    \item Adentrarme y aprender sobre tratamiento, procesado y gestión de datos mediante tecnologías como Stream Processing Frameworks.
+    \item La implementación de motores de búsqueda para felicitar encontrar los datos deseados con la mayor precisión posible.
+    \item Que la monitorización de los datos se muestre los más clara y accesible posible para el usuario.
+\end{enumerate}
