--- a/Documentación/LATEX/bibliografia.bib
+++ b/Documentación/LATEX/bibliografia.bib
@@ -26,3 +26,91 @@
   publisher={Elsevier}
 }
 
+@misc{ ranking:DB-Engines,
+       author = "DB-Engines",
+       title = "DB-Engines Ranking of Search Engines",
+       year = "2020",
+       url = "https://db-engines.com/en/ranking/search+engine"
+}
+
+@misc{documentacion:kafka,
+    author = "Apache Kafka",
+    title = "Kafka 2.7 Documentation",
+    year = "2020",
+    url = "https://kafka.apache.org/27/documentation.html"
+}
+
+@misc{pagina:kafka,
+    author = "Apache Kafka",
+    title = "Apache Kafka a distributed streaming plataform",
+    year = "2020",
+    url = "https://kafka.apache.org/"}
+    
+@misc{pagina:Samza,
+    author = "Apache Samza",
+    title = "Apache Samza a distributed streaming Processing framework",
+    year = "2020",
+    url = "https://samza.apache.org/"}
+    
+@misc{pagina:Flume,
+    author = "Apache Flume",
+    title = "Apache Flume",
+    year = "2020",
+    url = "https://flume.apache.org/"
+}
+    
+@misc{pagina:PRTG,
+      author = "PAESSLER",
+      title = "PRTG Network Monitor",
+      year = "2020",
+      url = "https://www.es.paessler.com/prtg"
+}
+      
+@misc{pagina:ThingSpeak,
+      author = "ThingSpeak",
+      title = "ThingSpeak for IoT Projects",
+      year = "2020",
+      url = "https://thingspeak.com/"
+}
+
+@misc{pagina:Grafana,
+      author = "Grafana",
+      title = "Grafana",
+      year = "2020",
+      url = "https://grafana.com/"
+}
+
+@misc{pagina:Algolia,
+      author = "Algolia",
+      title = "Algolia",
+      year = "2020",
+      url = "https://www.algolia.com/"
+}
+
+@misc{pagina:ElasticSearch,
+      author = "ElasticSearch",
+      title = "ElasticSearch",
+      year = "2020",
+      url = "https://www.elastic.co/es/"
+}
+
+@misc{pagina:Solr,
+      author = "Apache Software Foundation",
+      title = "Apache Solr",
+      year = "2020",
+      url = "https://lucene.apache.org/solr/"
+}
+
+@misc{pagina:scikit-learn,
+      author = "David Cournapeau",
+      title = "scikit-learn Machine Learning in Python",
+      year = "2020",
+      url = "https://scikit-learn.org/stable/"
+}
+
+@misc{pagina:scikit-mutliflow,
+      author = "The scikit-mutliflow development team and the open research community",
+      title = "scikit-mutliflow A machine learning package for streaming data in Python",
+      year = "2020",
+      url = "https://scikit-multiflow.github.io/"
+}
