#11 herramienta Airflow información

--- a/Documentación/LATEX/bibliografia.bib
+++ b/Documentación/LATEX/bibliografia.bib
@@ -114,3 +114,10 @@
       year = "2020",
       url = "https://scikit-multiflow.github.io/"
 }
+
+@misc{pagina:HEVO,
+      author = "Nicholas Samuel",
+      title = "Apache Kafka vs Airflow: A Comprehensive Guide",
+      year = "2020",
+      url = "https://hevodata.com/learn/apache-kafka-vs-airflow-a-comprehensive-guide/"
+}
