--- a/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
@@ -7,9 +7,15 @@ Se implementará también un algoritmo de aprendizaje automático que ha de apre
 \subsection{Objetivos}
 
 \begin{enumerate}
-    \item Utilizar un repositorio en github y aplicar conocimientos sobre gestión de proyectos.
-    \item Realizar un algoritmo de aprendizaje automático para poder aplicar lo aprendido durante la carrera así cómo ampliar mis conocimientos sobre minería de datos.
-    \item Adentrarme y aprender sobre tratamiento, procesado y gestión de datos mediante tecnologías como Stream Processing Frameworks.
+    \item Realizar un algoritmo de aprendizaje automático que pueda predecir comportamientos y patrones en los datos de los sensores.
     \item La implementación de motores de búsqueda para felicitar encontrar los datos deseados con la mayor precisión posible.
-    \item Que la monitorización de los datos se muestre los más clara y accesible posible para el usuario.
+    \item Que la monitorización de los datos se muestre lo más clara y accesible posible para el usuario.
+\end{enumerate}
+
+
+\subsection{Objetivos personales}
+
+\begin{enumerate}
+    \item Utilizar un repositorio en github y aplicar conocimientos sobre gestión de proyectos.
+    \item Adentrarme y aprender sobre tratamiento, procesado y gestión de datos mediante tecnologías como Stream Processing Frameworks.
 \end{enumerate}
