--- a/Documentación/LATEX/bibliografia.bib
+++ b/Documentación/LATEX/bibliografia.bib
@@ -121,3 +121,10 @@
       year = "2020",
       url = "https://hevodata.com/learn/apache-kafka-vs-airflow-a-comprehensive-guide/"
 }
+
+@misc{pagina:Splunk,
+      author = "Splunk",
+      title = "Splunk: The data-to.Everything Platform",
+      year = "2020",
+      url = "https://www.splunk.com/"
+}
