--- a/Documentación/LATEX/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/LATEX/tex/4_Tecnicas_y_herramientas.tex
@@ -25,6 +25,7 @@ Es un procesador de flujo a tiempo real, usa Apache Kafka para la mensajería y 
 \subsection{Apache Flume}
 
 Apache Flume es un servicio distribuido capaz de mover grandes cantidades de datos y logs, este forma parte del ecosistema de Hadoop. Su arquitectura es tanto flexible cómo sencilla aunque presenta cierta dificultad a la hora de escalar. Esta basado en flujo de datos en Streaming permitiendo múltiples flujos.\cite{pagina:Flume}
+
 \section{Visualización y análisis de datos}
 
 Para monitorizar nuestros datos debemos hacer uso de herramientas de Network monitoring que nos permita detectar fallos y anomalías en los datos así cómo alertarnos si alguno de los datos monitorizados pasan por debajo de un umbral.
@@ -44,7 +45,10 @@ ThingSpeak consta de aplicaciones complementarias con diversas funcionalidades. 
 Grafana nos permite visualizar y representar métricas de datos sin importar donde estén almacenados, la visualización es rápida y flexible con multitud de opciones. En Grafana se pueden definir alertas sobre las métricas que deseemos y mandarnos notificaciones de las mismas, también cuenta con cientos de plugins oficiales. 
 
 Contiene una opción de pago en la que ellos albergan ellos el servidor y otro completamente gratuita en la que nosotros podremos ejecutarlo en cualquiera de los sistemas operativos principales.\cite{pagina:Grafana}
+\section{Splunk}
+Splunk es una plataforma que nos permite monitorizar, buscar y analizar nuestros datos en tiempo real, esta herramienta consta con cientos de aplicaciones y es compatible con casi cualquier formato de logs. Splunk es gratis con un volumen de datos diarios de menos de 500MB. \cite{pagina:Splunk}
 
+Uno de sus atractivos es que consta de una herramienta machine learning que aprende de tus datos detectando anomalías y prediciéndolas.
 \section{Motor de búsquedas}
 
 \subsection{Algolia}
