--- a/Documentación/LATEX/bibliografia.bib
+++ b/Documentación/LATEX/bibliografia.bib
@@ -128,3 +128,10 @@
       year = "2020",
       url = "https://www.splunk.com/"
 }
+
+@misc{pagina:ElasticSearchRepositories,
+      author = "ElasticSearch",
+      title = "Repositories for APT and YUM",
+      year = "2021",
+      url = "https://www.elastic.co/guide/en/beats/filebeat/current/setup-repositories.html#_apt"
+}
