--- a/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
@@ -1,6 +1,6 @@
 \capitulo{2}{Objetivos del proyecto}
 
-El objetivo de este proyecto consta de la captación dinámica de diversos datos provenientes de sensores IOT, los datos, cedidos por el cliente se han de tratar y almacenar en una base de datos para poder ser consultados y monitorizados por el usuario en cualquier momento y a tiempo real. 
+El objetivo de este proyecto consta de la captación dinámica de diversos datos provenientes de sensores IOT, los datos, cedidos por el cliente se han de tratar y almacenar en una base de datos para poder ser consultados y monitorizados por el usuario en cualquier momento. 
 
 Se implementará también un algoritmo de aprendizaje automático que ha de aprender con los datos obtenidos a identificar patrones que puedan llevar a situaciones no deseadas y que esto pueda ayudar al usuario a tomar decisiones con la suficiente antelación.
 
