--- a/Documentación/LATEX/tex/A_Plan_proyecto.tex
+++ b/Documentación/LATEX/tex/A_Plan_proyecto.tex
@@ -4,6 +4,37 @@
 
 \section{Planificación temporal}
 
+Para la realización el proyecto se ha optado por la utilización el método \textbf{Scrum}, una metodología ágil de gestión de proyectos en la  que se ha dividido el desarrollo en \textbf{sprints} de 2 semanas de duración en la que había una reunión con el tutor y se planteaban las próximas tareas que se iban a realizar.
+
+Debido a la situación actual del COVID-19 las reuniones se llevaron a cabo mediante videallamadas por \textbf{Microsoft Teams}
+
+\subsection{Sprint 0 - Introducción (30/11/2020 - 14/12/2020 )}
+
+Durante este \textbf{Sprint} lo principal fue investigar sobre las posibles herramientas que podía utilizar para este proyecto así cómo documentar dichas herramientas en la memoria.
+
+Durante esta parte del proyecto se creo el repositorio de Github.
+
+\subsection{Sprint 1   (14/12/2020 - 04/01/2021 )}
+
+Durante este \textbf{Sprint} se decidieron las herramientas que se iban a utilizar así cómo redactar los objetivos del proyecto.
+
+\subsection{Sprint 2   (04/01/2021 - 06/02/2021 )}
+
+Durante este \textbf{Sprint} se instaló el servidor PRTG en una máquina virtual Windows 10 así cómo ElasticSearch. 
+
+\subsection{Sprint 3   (06/02/2021 - 25/02/2021 )}
+
+Durante este \textbf{Sprint} se realizo 
+\subsection{Sprint 4   (25/02/2021 - 12/03/2021 )}
+Durante este \textbf{Sprint} se migro ElasticSearch a una máquina Virtual Ubuntu server y se realizo la conexión entre ambas.
+
+\subsection{Sprint 5   (12/03/2021 - 26/03/2021 )}
+
+
+
+\subsection{Sprint 6   (12/03/2021 - 12/04/2021 )}
+
+
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
