--- a/Documentación/LATEX/anexos.tex
+++ b/Documentación/LATEX/anexos.tex
@@ -9,11 +9,12 @@
 \usepackage{microtype}
 \usepackage{placeins}
 
+\usepackage{listings}             % Include the listings-package
+
 \RequirePackage{booktabs}
 \RequirePackage[table]{xcolor}
 \RequirePackage{xtab}
 \RequirePackage{multirow}
-
 % Links
 \PassOptionsToPackage{hyphens}{url}\usepackage[colorlinks]{hyperref}
 \hypersetup{
